# webserver

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: ci.yml
src/: CMakeLists.txt  chat_application.cc  chat_application.h  main.cc
src/chat/: user.cc  user.h
src/db/: database_manager.cc  database_manager.h
src/http/: http_request.cc  http_request.h  http_response.cc  http_response.h  http_server.cc  http_server.h
src/utils/: logger.cc  logger.h  thread_pool.cc  thread_pool.h  timer.cc  timer.h
static/: chat.html  login.html  register.html  style.css
tests/: CMakeLists.txt
tests/db/: database_manager_test.cc
tests/http/: http_request_test.cc  http_response_test.cc  http_server_test.cc
tests/utils/: logger_test.cc  thread_pool_test.cc  timer_test.cc
